# tedit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: editor.h  file_io.h
src/: editor.c  file_io.c  main.c
